# sapho

./: .cursorrules  .env.example  .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
baml_src/: generators.baml  resume.baml
sapho/: __init__.py  api.py
sapho/ai/: sonar.py
sapho/plugins/: __init__.py  dexscreener.py
src/: __init__.py  __main__.py  config.py
src/ai/: sonar.py
src/api/: server.py
src/core/: agent.py
src/plugins/: __init__.py  base.py  grok.py
src/sapho/: __init__.py  __main__.py
src/sapho/ai/: sonar.py
src/sapho/api/: server.py
src/sapho/core/: agent.py
src/sapho/plugins/: __init__.py  base.py  grok.py
